export interface IRssFetcher { fetch(): Promise<string> }