export interface IRssOutput { output(data: string): Promise<void> }