export interface IRssTransformer { transform(data: string): string }