export type RssItem = {
  title: string;
  link: string;
  pubDate: string;
};